--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
   <meta charset="UTF-8">
   <title>OOP Course Portal – Fall 2025</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f4f4f4; }
-    h1 { margin-bottom: 30px; }
-    .card { background: #fff; padding: 20px; margin: 20px auto; width: 60%; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.2); }
-    a.button { display: inline-block; padding: 10px 20px; margin: 10px; background: #007bff; color: white; text-decoration: none; border-radius: 5px; }
-    a.button:hover { background: #0056b3; }
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 40px;
+      background: #f4f4f4;
+      color: #333;
+    }
+    h1 {
+      margin-bottom: 40px;
+      font-size: 2.5em;
+      color: #222;
+    }
+    .card {
+      background: #fff;
+      padding: 25px;
+      margin: 20px auto;
+      width: 70%;
+      max-width: 700px;
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+    }
+    h2 {
+      margin-bottom: 10px;
+      color: #444;
+    }
+    p {
+      font-size: 1.1em;
+      margin-bottom: 15px;
+    }
+    a.button {
+      display: inline-block;
+      padding: 12px 25px;
+      margin-top: 10px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      font-size: 1em;
+      border-radius: 6px;
+      transition: background-color 0.2s ease;
+    }
+    a.button:hover {
+      background-color: #0056b3;
+    }
+    footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #555;
+    }
   </style>
 </head>
 <body>
@@ -16,21 +59,24 @@
 
   <div class="card">
     <h2>Assignment 1: Proposal</h2>
-    <p>Submit your proposal report inside <code>/report</code>. Follow folder structure.</p>
-    <a class="button" href="YOUR_ASSIGNMENT1_LINK" target="_blank">Submit Assignment 1</a>
+    <p>Submit your written proposal in the <code>/report</code> folder. Follow the required structure.</p>
+    <a class="button" href="https://classroom.github.com/a/CGJqB8xo" target="_blank">Submit Assignment 1</a>
   </div>
 
   <div class="card">
     <h2>Assignment 2: Low-Fidelity Prototype</h2>
-    <p>Submit your wireframes and notes inside <code>/code</code> and <code>/report</code>.</p>
-    <a class="button" href="YOUR_ASSIGNMENT2_LINK" target="_blank">Submit Assignment 2</a>
+    <p>Submit your wireframes in the <code>/code</code> folder and your report in the <code>/report</code> folder.</p>
+    <a class="button" href="https://classroom.github.com/a/5PRgGAth" target="_blank">Submit Assignment 2</a>
   </div>
 
   <div class="card">
     <h2>Assignment 3: High-Fidelity Prototype</h2>
-    <p>Submit your C++ project in <code>/code</code> and report/diagrams in <code>/report</code>.</p>
-    <a class="button" href="YOUR_ASSIGNMENT3_LINK" target="_blank">Submit Assignment 3</a>
+    <p>Submit your complete C++ project in the <code>/code</code> folder and your report & UML diagrams in the <code>/report</code> folder.</p>
+    <a class="button" href="https://classroom.github.com/a/A3Pdeccs" target="_blank">Submit Assignment 3</a>
   </div>
 
+  <footer>
+    © Fall 2025 – CS3307 OOP Course | GitHub Classroom Portal
+  </footer>
 </body>
 </html>
