--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     }
     .step .meta{ font-size:.92rem; color: var(--muted); margin-top:2px; }
 
-    /* -------------------- ASSIGNMENTS -------------------- */
+    /* -------------------- SECTIONS -------------------- */
     .section{
       max-width:1100px; margin: 28px auto; padding: 0 20px;
     }
@@ -157,14 +157,12 @@
     }
     .sub{ color: var(--muted); margin-bottom:18px; }
 
+    /* -------------------- GRID CARDS -------------------- */
     .grid{
       display:grid; gap:18px;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(2, 1fr);
     }
-    @media (max-width: 1000px){
-      .grid{ grid-template-columns: repeat(2, 1fr); }
-    }
-    @media (max-width: 680px){
+    @media (max-width: 900px){
       .grid{ grid-template-columns: 1fr; }
     }
 
@@ -217,9 +215,29 @@
     }
     .cta:hover{ transform: translateY(-2px); box-shadow: 0 14px 26px rgba(79,70,229,.42); }
 
+    /* -------------------- TABLE -------------------- */
+    .table-wrap{
+      background: linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));
+      border:1px solid rgba(255,255,255,.09);
+      border-radius: var(--radius);
+      padding: 16px;
+      box-shadow: var(--shadow);
+      overflow-x:auto;
+    }
+    table{
+      width:100%; border-collapse: collapse; min-width: 580px;
+    }
+    th, td{
+      padding: 12px 14px; border-bottom:1px solid rgba(255,255,255,.10);
+      text-align:left;
+    }
+    th{ color:#cbd5e1; font-weight:600; }
+    td{ color: var(--text); }
+    .small-note{ color: var(--muted); font-size:.92rem; margin-top:8px; }
+
     /* -------------------- RESOURCES -------------------- */
     .resources{
-      display:grid; grid-template-columns: 1.4fr .6fr; gap:18px;
+      display:grid; grid-template-columns: 1.2fr .8fr; gap:18px;
     }
     @media (max-width: 900px){
       .resources{ grid-template-columns: 1fr; }
@@ -253,6 +271,7 @@
         <span>CS3307 • Object-Oriented Programming</span>
       </div>
       <nav class="nav" aria-label="Sections">
+        <a href="#deliverables">Deliverables</a>
         <a href="#assignments">Assignments</a>
         <a href="#how">How it works</a>
         <a href="#resources">Resources</a>
@@ -277,9 +296,9 @@
         <p class="hero-quote">“Great software is crafted with clarity, compassion, and consistency.”</p>
 
         <div class="hero-stats" aria-label="Quick stats">
-          <div class="stat"><div class="k">3</div><div class="t">Assignments</div></div>
+          <div class="stat"><div class="k">2</div><div class="t">Assignments via GitHub</div></div>
+          <div class="stat"><div class="k">A1 → Brightspace</div><div class="t">Submission platform</div></div>
           <div class="stat"><div class="k">/code · /report</div><div class="t">Folder structure</div></div>
-          <div class="stat"><div class="k">GitHub Classroom</div><div class="t">Submission platform</div></div>
         </div>
       </div>
 
@@ -288,14 +307,14 @@
           <div class="badge">1</div>
           <div>
             <strong>Open the assignment</strong>
-            <div class="meta">Use the “Submit” button to accept the Classroom invitation.</div>
+            <div class="meta">Use the “Submit” button to accept the GitHub Classroom invitation (A2 & A3).</div>
           </div>
         </div>
         <div class="step">
           <div class="badge">2</div>
           <div>
             <strong>Follow structure</strong>
-            <div class="meta">Place code in <code>/code</code> and written report/diagrams in <code>/report</code>.</div>
+            <div class="meta">Place <em>C++ build (source)</em> in <code>/code</code> and the <em>report</em> in <code>/report</code>.</div>
           </div>
         </div>
         <div class="step">
@@ -316,64 +335,78 @@
     </div>
   </header>
 
-  <!-- Assignments -->
+  <!-- Deliverables & Due Dates -->
+  <section class="section" id="deliverables" aria-labelledby="deliverables-title">
+    <h2 id="deliverables-title">Deliverables & Due Dates</h2>
+    <p class="sub">Based on the course outline: titles, deadlines, and weights.</p>
+    <div class="table-wrap" role="region" aria-label="Deliverables table">
+      <table>
+        <thead>
+          <tr>
+            <th>Deliverable</th>
+            <th>Due Date</th>
+            <th>Weight</th>
+            <th>Submission</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Project Proposal (Assignment 1)</td>
+            <td>September 30, 2025</td>
+            <td>20%</td>
+            <td><strong>Submit on Brightspace</strong></td>
+          </tr>
+          <tr>
+            <td>Intermediate Design and Partial Implementation (Assignment 2)</td>
+            <td>October 30, 2025</td>
+            <td>30%</td>
+            <td>GitHub Classroom (see card below)</td>
+          </tr>
+          <tr>
+            <td>Final Project Submission (Assignment 3)</td>
+            <td>December 15, 2025</td>
+            <td>30%</td>
+            <td>GitHub Classroom (see card below)</td>
+          </tr>
+          <tr>
+            <td>Final Exam</td>
+            <td>December 10, 2025</td>
+            <td>20%</td>
+            <td>As scheduled by the instructor</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="small-note">Note: A1 is not on GitHub—submit on Brightspace only.</div>
+    </div>
+  </section>
+
+  <!-- Assignments (A2 & A3 only) -->
   <section class="section" id="assignments" aria-labelledby="assignments-title">
     <h2 id="assignments-title">Assignments</h2>
-    <p class="sub">Clear expectations. Consistent structure. One click to submit.</p>
+    <p class="sub">A2 & A3 are submitted via GitHub Classroom. Include your C++ build (source) and a well-structured report.</p>
 
     <div class="grid">
-      <!-- A1 -->
-      <article class="card" aria-labelledby="a1-title">
-        <div class="card-head">
-          <div class="title" id="a1-title">
-            <!-- doc icon -->
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <path d="M7 3h6l4 4v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z" stroke="#a5b4fc" stroke-width="1.4"/>
-              <path d="M13 3v4h4" stroke="#67e8f9" stroke-width="1.4"/>
-            </svg>
-            Assignment 1: Proposal
-          </div>
-          <span class="chip">Writing</span>
-        </div>
-        <p class="desc">
-          Submit your written proposal in <code>/report</code>.
-          Follow the required structure and include a brief problem statement, objectives, and timeline.
-        </p>
-        <div class="meta-row">
-          <span class="tag">Weight: as announced</span>
-          <span class="tag">Due: set by instructor</span>
-          <span class="tag">Format: PDF/Markdown</span>
-        </div>
-        <a class="cta" href="https://classroom.github.com/a/CGJqB8xo" target="_blank" rel="noopener">
-          <!-- arrow icon -->
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <path d="M5 12h14M13 5l7 7-7 7" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-          Submit Assignment 1
-        </a>
-      </article>
-
       <!-- A2 -->
       <article class="card" aria-labelledby="a2-title">
         <div class="card-head">
           <div class="title" id="a2-title">
-            <!-- wireframe icon -->
+            <!-- gear/code icon -->
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <rect x="3" y="4" width="18" height="16" rx="3" stroke="#a5b4fc" stroke-width="1.4"/>
-              <path d="M3 9h18M8 9v11" stroke="#67e8f9" stroke-width="1.4"/>
+              <path d="M8 8l-3 4 3 4M16 8l3 4-3 4" stroke="#67e8f9" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            Assignment 2: Low-Fidelity Prototype
+            Assignment 2: Intermediate Design & Partial Implementation
           </div>
-          <span class="chip">Design</span>
+          <span class="chip">C++ Build + Report</span>
         </div>
         <p class="desc">
-          Submit wireframes in <code>/code</code> and the report in <code>/report</code>.
-          Describe task flows, key screens, and rationale for design decisions.
+          Submit your <strong>C++ build (source)</strong> in <code>/code</code> and your <strong>report</strong> in <code>/report</code>.
+          Include design decisions, implementation progress, and build/run steps.
         </p>
         <div class="meta-row">
-          <span class="tag">Weight: as announced</span>
-          <span class="tag">Due: set by instructor</span>
-          <span class="tag">Format: PNG/PDF + Report</span>
+          <span class="tag">Weight: 30%</span>
+          <span class="tag">Due: Oct 30, 2025</span>
+          <span class="tag">Format: Source + PDF/Markdown</span>
         </div>
         <a class="cta" href="https://classroom.github.com/a/5PRgGAth" target="_blank" rel="noopener">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
@@ -392,17 +425,17 @@
               <path d="M8 16l-4-4 4-4M16 8l4 4-4 4" stroke="#a5b4fc" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M14 4l-4 16" stroke="#67e8f9" stroke-width="1.4" stroke-linecap="round"/>
             </svg>
-            Assignment 3: High-Fidelity Prototype
+            Assignment 3: Final Project Submission
           </div>
-          <span class="chip">C++ Build</span>
+          <span class="chip">C++ Build + Report</span>
         </div>
         <p class="desc">
-          Submit your complete C++ project in <code>/code</code>, and your report &amp; UML diagrams in <code>/report</code>.
-          Include build/run instructions and any external dependencies.
+          Submit your <strong>complete C++ project (source)</strong> in <code>/code</code>, and your <strong>final report</strong> (and any diagrams) in <code>/report</code>.
+          Provide full build/run instructions and list external dependencies.
         </p>
         <div class="meta-row">
-          <span class="tag">Weight: as announced</span>
-          <span class="tag">Due: set by instructor</span>
+          <span class="tag">Weight: 30%</span>
+          <span class="tag">Due: Dec 15, 2025</span>
           <span class="tag">Format: Source + PDF</span>
         </div>
         <a class="cta" href="https://classroom.github.com/a/A3Pdeccs" target="_blank" rel="noopener">
@@ -415,7 +448,7 @@
     </div>
   </section>
 
-  <!-- Resources & Notes -->
+  <!-- Resources, Checklist & Contacts -->
   <section class="section" id="resources" aria-labelledby="resources-title">
     <h2 id="resources-title">Resources & Notes</h2>
     <p class="sub">Everything you need for smooth submissions.</p>
@@ -427,16 +460,18 @@
           <li>✅ README with build/run steps inside <code>/report/README.md</code></li>
           <li>✅ Respect required folder structure: <code>/code</code> & <code>/report</code></li>
           <li>✅ Commit early, commit often; push before the deadline</li>
-          <li>✅ Diagrams (UML for A3) exported to PDF inside <code>/report</code></li>
+          <li>✅ Diagrams (if any) exported to PDF inside <code>/report</code></li>
           <li>✅ Do not include large binaries unless explicitly requested</li>
         </ul>
       </div>
+
       <div class="info" aria-label="Support">
-        <h3>Need help?</h3>
+        <h3>Contact & Support</h3>
         <ul class="list">
-          <li>📧 Contact: course staff via LMS discussion or email</li>
-          <li>🛠️ Office Hours: see course schedule</li>
-          <li>📂 Repository access: ensure you accepted the Classroom invite</li>
+          <li>📧 <strong>Abdul Wahab Naeem</strong> — <a href="mailto:anaeem57@uwo.ca">anaeem57@uwo.ca</a></li>
+          <li>📧 <strong>Syed Farasat</strong> — <a href="mailto:sali666@uwo.ca">sali666@uwo.ca</a></li>
+          <li>📧 <strong>Memoona Aziz</strong> — <a href="mailto:maziz86@uwo.ca">maziz86@uwo.ca</a></li>
+          <li>📧 <strong>Mahmoud Khalid</strong> — <a href="mailto:mkhali72@uwo.ca">mkhali72@uwo.ca</a></li>
         </ul>
       </div>
     </div>
@@ -453,7 +488,7 @@
     btn.addEventListener('click', () => {
       const isLight = document.documentElement.getAttribute('data-theme') === 'light';
       document.documentElement.setAttribute('data-theme', isLight ? 'dark' : 'light');
-      btn.textContent = isLight ? 'Toggle theme' : 'Toggle theme';
+      btn.textContent = 'Toggle theme';
     });
   </script>
 </body>
