--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
       <nav class="nav" aria-label="Sections">
         <a href="#deliverables">Deliverables</a>
         <a href="#assignments">Assignments</a>
+        <!-- NEW: Office Hours tab -->
+        <a href="#office-hours">Office Hours</a>
         <a href="#how">How it works</a>
         <a href="#resources">Resources</a>
         <button class="toggle" id="themeToggle" aria-label="Toggle theme">Toggle theme</button>
@@ -445,6 +447,26 @@
           Submit Assignment 3
         </a>
       </article>
+    </div>
+  </section>
+
+  <!-- NEW: Office Hours -->
+  <section class="section" id="office-hours" aria-labelledby="office-hours-title">
+    <h2 id="office-hours-title">Office Hours</h2>
+    <p class="sub">TA office hours schedule and join details are kept up to date in the document below.</p>
+
+    <div class="resources">
+      <div class="info" aria-label="Office hours link">
+        <h3>Virtual Office Hours (Teams)</h3>
+        <p class="desc">
+          View the weekly schedule, join link, and any updates in the shared document.
+        </p>
+        <a class="cta"
+           href="https://uwoca-my.sharepoint.com/:b:/g/personal/anaeem57_uwo_ca/EdAEbOoBYJxJkWcpwyIFgMQBa262c6jynFXVLkd6gc6Lxg?e=ikO1ft"
+           target="_blank" rel="noopener">
+          Open Office Hours Document
+        </a>
+      </div>
     </div>
   </section>
 
