--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <tbody>
           <tr>
             <td>Project Proposal (Assignment 1)</td>
-            <td>October 1st, 2025</td>
+            <td>October 3rd, 2025</td>
             <td>20%</td>
             <td><strong>Submit on Brightspace</strong></td>
           </tr>
