--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           View the weekly schedule, join link, and any updates in the shared document.
         </p>
         <a class="cta"
-           href="https://uwoca-my.sharepoint.com/:b:/g/personal/anaeem57_uwo_ca/EdAEbOoBYJxJkWcpwyIFgMQBa262c6jynFXVLkd6gc6Lxg?e=ikO1ft"
+           href="https://uwoca-my.sharepoint.com/:b:/g/personal/anaeem57_uwo_ca/EYg9ao5CDsdMmUalkBDaMr8BcZFHhoz5LHQSwH1p0fygTA?e=g8PuYo"
            target="_blank" rel="noopener">
           Open Office Hours Document
         </a>
