--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <span class="tag">Due: Oct 30, 2025</span>
           <span class="tag">Format: Source + PDF/Markdown</span>
         </div>
-        <a class="cta" href="https://classroom.github.com/a/5PRgGAth" target="_blank" rel="noopener">
+        <a class="cta" href="https://classroom.github.com/a/8Cy36LS2" target="_blank" rel="noopener">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M5 12h14M13 5l7 7-7 7" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
@@ -440,7 +440,7 @@
           <span class="tag">Due: Dec 15, 2025</span>
           <span class="tag">Format: Source + PDF</span>
         </div>
-        <a class="cta" href="https://classroom.github.com/a/A3Pdeccs" target="_blank" rel="noopener">
+        <a class="cta" href="https://classroom.github.com/a/dL5Ec4iv" target="_blank" rel="noopener">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M5 12h14M13 5l7 7-7 7" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
