--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
           </tr>
           <tr>
             <td>Final Exam</td>
-            <td>December 10, 2025</td>
+            <td>December 21, 2025</td>
             <td>20%</td>
-            <td>As scheduled by the instructor</td>
+            <td>Inperson</td>
           </tr>
         </tbody>
       </table>
